# rbm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint-test.yaml  lint.yaml  release.yaml
src/: bookmarks.rs  cli.rs  config.rs  finder.rs  lib.rs  main.rs
src/cmd/: add.rs  list.rs
