[package]
name = "rbm"
version = "0.1.0"
edition = "2021"
description = "A command line bookmark management app written in Rust!"
readme = "README.md"
keywords = ["bookmark","cli"]
license = "MIT"

[[bin]]
name = "rbm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3"
serde_json = "1.0"
skim = "0.9"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
