[package]
name = "rbm"
version = "0.1.3"
edition = "2021"
authors = ["yuki-k <urawa72@gmail.com>"]
repository = "https://github.com/urawa72/rbm"
categories = ["command-line-utilities"]
keywords = ["bookmark","cli"]
license = "MIT"
description = "A command line bookmark management app written in Rust!"
readme = "README.md"

[[bin]]
name = "rbm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3"
serde_json = "1.0"
skim = "0.9"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
